feat(任务中心): 任务中心模块-定时任务-删除